--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,9 +11,9 @@ RUN set -e; apt-get install -y cmt python3-mlt python3-pandas less mc exif ffmpe
 RUN python3 -m pip install python-dateutil exif geopy ffmpeg-python 
 RUN python3 -m pip install dataprep==0.4.0
 
-RUN python3 -m pip install overpy
+RUN apt-get install -y git bash-completion python3-cairo python3-pil
+RUN python3 -m pip install overpy geotiler urllib3 requests
 
-RUN apt-get install -y git bash-completion
 
 #RUN set -e; apt-get -yq autoremove; apt-get autoclean
 
