--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,6 +31,7 @@
     "editorconfig.editorconfig",
     "ms-python.black-formatter",
     "ms-vscode.makefile-tools",
+    "ms-azuretools.vscode-docker",
   ],
   "mounts": [
     // "source=/var/run/docker.sock,target=/var/run/docker.sock,type=bind",
