Python version of the script working

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
       "name": "Python Debugger: Current File",
       "type": "debugpy",
       "request": "launch",
-      "program": "process.py",
+      "program": "slideshowmaker.py",
       "console": "integratedTerminal"
     }
   ]
